--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
     <body>
         <div class="main-content">
                {{>header}}
+               <p>This site is created by Vivek Kumar Pandey.It uses data from mapbox.com and weatherstack.com</p>
                  <img class="portrait" src="/img/me.jpg">
         </div>
         
